test/sema/interface-impl-decl-error-missing-method.delta
// RUN: %check_errors %not %delta -typecheck %s

interface X {
    void foo();
}

// CHECK: [[@LINE+1]]:8: error: 'Z' doesn't have member function 'foo' required by interface 'X'
struct Z<T>: X {}

void main() {
    var z = Z<int>();
}
